# lwi-microbolometer-design

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
data/Original Test (Excel Sheet)/: absorptivity.csv  emissivity.csv  nn_example_testdata1.csv  spectra.csv
docs/: TUNING_DESIGN_PROPOSAL.md  TUNING_IMPLEMENTATION_PLAN.md  TUNING_TASK_LIST.md
legacy/archive/: calc_simulated_signal.py  estimate_baseline.py  main_la.py  main_n+1.py  main_non_PCA_lastworkingversion.py  main_reconstructed.py  main_reconstructed_with_hist_plot.py  nn_example.ipynb  percentage_of_mixture.py  pipeline_demo_noise.ipynb  playground_PCA.py  playground_non_PCA.py  plot_PCA_demo.py  plot_RGB_response.py  plot_data.py  rank_basis_functions.py  test_PCA.py  test_non_PCA_backup.py
legacy/experiments/: 01_sam_ga_optimization.ipynb  01_sam_ga_optimization_backup.ipynb  example_full_search.yaml  example_validation.yaml
legacy/notebooks/: SAM_demo copy.ipynb  SAM_demo.ipynb  SAM_demo_AIS.ipynb  SAM_demo_GA.ipynb  demo_advanced_ga.ipynb  iVAT_demo.ipynb  multiprocessing_helpers.py  plot_simulated_basis_functions.ipynb  run_parallel_ga.py
legacy/old_files_on_root/random utilities/: cal_predict_by_least_sqr.ipynb  cal_predict_by_mtx_mul.ipynb  config.yaml  demo_group_show_subs.ipynb  demo_plots.ipynb  draw_neural_net.py  pca-bf_selection.ipynb  pca.ipynb  pkl_to_excel.py
legacy/old_files_on_root/tests_old/: ga_v1.py  test_lstsq1.py  test_lstsq2.py
legacy/plot_code/: plot_L1_performance_noise.py  plot_L1_performance_noise_backup.py  plot_interval_vs_l1loss_vs_det.py  plot_model_perform_diff_temp.py  plot_multi_dist.py  plot_multi_temp_test_temp.py  plot_multi_test_noise.py  plot_new_model.py  plot_noise_vs_time.py  plot_old_model.py  plot_perc_actual.py  plot_perc_expect.py  plot_performance_comparison.py  plot_performance_noise.py  plot_test_noise_multi_mb.py  plot_unknown_subs.py  plot_updated_perf_nn_vs_la.py  rm_model_perform_diff_temp.py
legacy/presentation_plots/: slide2_plots.py
legacy/scripts/debug/: test_mutation_niching_debug.py
legacy/scripts/demo/: demo_ga_basic.py
legacy/scripts/module1/: plot_module1.py  run_module1_baseline.py
legacy/scripts/module2/: plot_module2.py  run_module2_comparison.py
legacy/scripts_old/: analytical.py  analytical_batch.py  config.yaml  config_model_tester.yaml  config_model_tester_dist.yaml  config_model_tester_temp.yaml  config_model_tester_test_noise.yaml  config_model_tester_unknown_sub.yaml  config_model_trainer.yaml  config_model_trainer_unknown_sub.yaml  config_multi_dist_model_tester.yaml  config_multi_dist_model_trainer.yaml  config_multi_temp_model_tester.yaml  config_multi_temp_model_trainer.yaml  main_latest.py  main_latest_with_MP.py  model_tester_distance.py  model_tester_temperature.py  model_tester_test_noise.py  model_tester_unknown_sub.py  model_trainer.py  model_trainer_unknown_sub.py  multi_dist_model_tester.py  multi_dist_model_trainer.py  multi_temp_model_tester.py  multi_temp_model_trainer.py
legacy/tools/: MLP.py  Parameters.py  __init__.py  ballsINTObins.py  epochs.py  k_fold_train_val.py  train_val_test.py
legacy/tools/data_processing/: Dataset.py  create_dataset.py  dataframe_to_file.py  load_data.py  split_dataset.py
legacy/tools/scoring/: FOM_sensor_noise_covaraince.py  RMSELoss.py  calc_conf_interval.py  difference_matrix.py  distance_matrix.py  distance_matrix_evaluation.py  earth_mover_distance.py  spectral_angle_mapper.py
legacy/tools/simulations/: blackbody_emit.py  generate_basis_functions.py  simulator.py
legacy/tools/utilities/: calculate_runtime.py  jcamp2csv.py
scripts/: demo_ga.py  run_diversity_search.py  run_ensemble_demo.py  run_map_elites.py  tune_ga.py  tune_niching_strategy.py
scripts/ga/: run_diversity_search.py  run_ensemble_demo.py  tune_ga.py
scripts/map_elites/: run_cma_me.py  run_map_elites_cma_polish.py  run_map_elites_hc_polish.py  run_map_elites_raw.py
scripts/prototypes/: analyze_population_diversity.py  analyze_tuning_results.py  demo_ga.py  demo_ga_comprehensive.py  plot_best_niching_config.py  polish_map_elites.py  regenerate_polished_plot.py  sweep_map_elites_configs.py  verify_strong_niching.py
scripts/robustness/: run_robustness_test.py
src/lwi_microbolometer_design/: __init__.py
src/lwi_microbolometer_design/analysis/: __init__.py  dissimilarity_scoring.py  distance_matrix.py  distance_metrics.py  optimal_pairing_distance.py  robustness.py  vat.py
src/lwi_microbolometer_design/data/: __init__.py  scene_config.py  substance_atmosphere_data.py
src/lwi_microbolometer_design/ga/: __init__.py  advanced_ga.py  analysis.py  diversity.py  experiment.py  fitness.py  ga_configuration.py  mutations.py  population_analysis.py  result_extraction.py  tuning.py  visualization.py
src/lwi_microbolometer_design/map_elites/: __init__.py  algorithm.py  archive.py  cma_me.py  emitters.py  normalization.py  polish.py  visualization.py
src/lwi_microbolometer_design/simulation/: __init__.py  blackbody.py  gaussian_parameter_to_curves.py  generated_basis_functions_deprecated.py  sensor_simulation.py
src/lwi_microbolometer_design/visualization/: __init__.py  distance_matrix_visualization.py  robustness_visualization.py  sensor_output_visualization.py
tests/: __init__.py  test_advanced_ga_minimal.py  test_analysis.py  test_scene_config.py  test_simulation.py
