[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwi-microbolometer-design"
version = "0.1.0"
description = "Infrared microbolometer sensor design and optimization tools for LWI program"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jiahe (LJ) Li", email = "j.li@missouri.edu"},
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "scipy",
    "pygad",
    "tqdm",
    "numba",
    "pyyaml",
    "cma",
]

[dependency-groups]
dev = [
    "jupyter",
    "pytest",
    "pre-commit",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
